# greeting_agent

./: README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
src/project_01/: main.py
src/project_01/crews/greet_crew/: greeting_crew.py
src/project_01/crews/greet_crew/config/: agents.yaml  tasks.yaml
