[project]
name = "project_01"
version = "0.1.0"
description = "project_01 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.105.0,<1.0.0",
    "streamlit>=1.43.1",
]

[project.scripts]
kickoff = "project_01.main:kickoff"
plot = "project_01.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
